--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,17 @@
-<h1> Home </h1>
 
 <header>
-  
-</header>
+  <h1> Scrabble Scoring! </h1>
 
   <nav>
-      <a href='/score'>Scoring</a>
+    <a href='/'>Home</a>
 
-      <a href='/score-many'>Scoring Many Words</a>
+    <a href='/score-many'>Scoring Many Words</a>
+
+    <a href='/score'>Scoring</a>
+
   </nav>
+</header>
+
+<main>
+
+</main>
